; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_ceil_var.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_numeric.c_ceil_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { i64 }

@NUMERIC_POS = common dso_local global i64 0, align 8
@const_one = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_13__*, %struct.TYPE_13__*)* @ceil_var to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ceil_var(%struct.TYPE_13__* %0, %struct.TYPE_13__* %1) #0 {
  %3 = alloca %struct.TYPE_13__*, align 8
  %4 = alloca %struct.TYPE_13__*, align 8
  %5 = alloca %struct.TYPE_13__, align 8
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %3, align 8
  store %struct.TYPE_13__* %1, %struct.TYPE_13__** %4, align 8
  %6 = call i32 @init_var(%struct.TYPE_13__* %5)
  %7 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %8 = call i32 @set_var_from_var(%struct.TYPE_13__* %7, %struct.TYPE_13__* %5)
  %9 = call i32 @trunc_var(%struct.TYPE_13__* %5, i32 0)
  %10 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* @NUMERIC_POS, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load %struct.TYPE_13__*, %struct.TYPE_13__** %3, align 8
  %17 = call i64 @cmp_var(%struct.TYPE_13__* %16, %struct.TYPE_13__* %5)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = call i32 @add_var(%struct.TYPE_13__* %5, i32* @const_one, %struct.TYPE_13__* %5)
  br label %21

21:                                               ; preds = %19, %15, %2
  %22 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %23 = call i32 @set_var_from_var(%struct.TYPE_13__* %5, %struct.TYPE_13__* %22)
  %24 = call i32 @free_var(%struct.TYPE_13__* %5)
  ret void
}

declare dso_local i32 @init_var(%struct.TYPE_13__*) #1

declare dso_local i32 @set_var_from_var(%struct.TYPE_13__*, %struct.TYPE_13__*) #1

declare dso_local i32 @trunc_var(%struct.TYPE_13__*, i32) #1

declare dso_local i64 @cmp_var(%struct.TYPE_13__*, %struct.TYPE_13__*) #1

declare dso_local i32 @add_var(%struct.TYPE_13__*, i32*, %struct.TYPE_13__*) #1

declare dso_local i32 @free_var(%struct.TYPE_13__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
